Fixed bugs & removed unused imports