@@ -1,19 +1,8 @@
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.InetSocketAddress;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
 import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 
@@ -314,21 +303,15 @@ public class v1_19_R2 implements NmsProvider {
 
 	@Override
 	public Object packetTitle(TitleAction action, Component text, int fadeIn, int stay, int fadeOut) {
-		switch (action) {
-		case ACTIONBAR:
-			return new ClientboundSetActionBarTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case TITLE:
-			return new ClientboundSetTitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case SUBTITLE:
-			return new ClientboundSetSubtitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case TIMES:
-			return new ClientboundSetTitlesAnimationPacket(fadeIn, stay, fadeOut);
-		case CLEAR:
-		case RESET:
-			return new ClientboundClearTitlesPacket(true);
-		}
-		return null;
-	}
+        return switch (action) {
+            case ACTIONBAR ->
+                    new ClientboundSetActionBarTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case TITLE -> new ClientboundSetTitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case SUBTITLE -> new ClientboundSetSubtitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case TIMES -> new ClientboundSetTitlesAnimationPacket(fadeIn, stay, fadeOut);
+            case CLEAR, RESET -> new ClientboundClearTitlesPacket(true);
+        };
+    }
 
 	@Override
 	public Object packetChat(ChatType type, Object chatBase, UUID uuid) {
@@ -378,7 +361,7 @@ public class v1_19_R2 implements NmsProvider {
 					IChatBaseComponent component = compoundTag.getName() == null ? null : (IChatBaseComponent) toIChatBaseComponent(compoundTag.getName());
 					EntityTypes<?> entityType = BuiltInRegistries.h.a(new MinecraftKey(compoundTag.getType()));
 					modif = modif.a(new ChatHoverable(EnumHoverAction.c, new ChatHoverable.b(entityType, compoundTag.getId(), component)));
-				} catch (Exception commandSyntaxException) {
+				} catch (Exception ignored) {
 				}
 				break;
 			case SHOW_ITEM:
@@ -389,7 +372,7 @@ public class v1_19_R2 implements NmsProvider {
 					if (compoundTag.getNbt() != null)
 						stack.c((NBTTagCompound) parseNBT(compoundTag.getNbt()));
 					modif = modif.a(new ChatHoverable(EnumHoverAction.b, new ChatHoverable.c(stack)));
-				} catch (Exception commandSyntaxException) {
+				} catch (Exception ignored) {
 				}
 				break;
 			default:
@@ -551,13 +534,12 @@ public class v1_19_R2 implements NmsProvider {
 
 	@Override
 	public BlockDataStorage toMaterial(Object blockOrIBlockData) {
-		if (blockOrIBlockData instanceof Block) {
-			IBlockData data = ((Block) blockOrIBlockData).n();
+		if (blockOrIBlockData instanceof Block block) {
+			IBlockData data = block.n();
 			return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
 		}
-		if (blockOrIBlockData instanceof IBlockData) {
-			IBlockData data = (IBlockData) blockOrIBlockData;
-			return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
+		if (blockOrIBlockData instanceof IBlockData data) {
+            return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
 		}
 		return new BlockDataStorage(Material.AIR);
 	}
@@ -598,21 +580,21 @@ public class v1_19_R2 implements NmsProvider {
 		if (string == null || string.trim().isEmpty())
 			return ib;
 
-		String key = "";
-		String value = "";
+		StringBuilder key = new StringBuilder();
+		StringBuilder value = new StringBuilder();
 		int set = 0;
 
 		for (int i = 1; i < string.length() - 1; ++i) {
 			char c = string.charAt(i);
 			if (c == ',') {
-				IBlockState ibj = blockStateList.a(key);
+				IBlockState ibj = blockStateList.a(key.toString());
 				if (ibj != null) {
-					Optional optional = ibj.b(value);
+					Optional optional = ibj.b(value.toString());
 					if (optional.isPresent())
 						ib = ib.a(ibj, (Comparable) optional.get());
 				}
-				key = "";
-				value = "";
+				key = new StringBuilder();
+				value = new StringBuilder();
 				set = 0;
 				continue;
 			}
@@ -621,14 +603,14 @@ public class v1_19_R2 implements NmsProvider {
 				continue;
 			}
 			if (set == 0)
-				key += c;
+				key.append(c);
 			else
-				value += c;
+				value.append(c);
 		}
 		if (set == 1) {
-			IBlockState ibj = blockStateList.a(key);
+			IBlockState ibj = blockStateList.a(key.toString());
 			if (ibj != null) {
-				Optional optional = ibj.b(value);
+				Optional optional = ibj.b(value.toString());
 				if (optional.isPresent())
 					ib = ib.a(ibj, (Comparable) optional.get());
 			}
@@ -669,7 +651,7 @@ public class v1_19_R2 implements NmsProvider {
 			boolean shouldSkip = true;
 			if (!onlyModifyState)
 				shouldSkip = false;
-			else if (onlyModifyState && !ent.q().b().getClass().equals(iblock.b().getClass())) {
+			else if (!ent.q().b().getClass().equals(iblock.b().getClass())) {
 				shouldSkip = false;
 				onlyModifyState = false;
 			}
@@ -727,8 +709,8 @@ public class v1_19_R2 implements NmsProvider {
 		chunk.q.k().a().a(new BlockPosition(x, y, z));
 	}
 
-	private static boolean isPaperChunkRework = Ref.getClass("io.papermc.paper.chunk.system.scheduling.ChunkHolderManager") != null;
-	private static Method getBlockStateFinal = Ref.method(net.minecraft.world.level.chunk.Chunk.class, "getBlockStateFinal", int.class, int.class, int.class);
+	private static final boolean isPaperChunkRework = Ref.getClass("io.papermc.paper.chunk.system.scheduling.ChunkHolderManager") != null;
+	private static final Method getBlockStateFinal = Ref.method(net.minecraft.world.level.chunk.Chunk.class, "getBlockStateFinal", int.class, int.class, int.class);
 
 	@Override
 	public Object getBlock(Object objChunk, int x, int y, int z) {
@@ -978,7 +960,7 @@ public class v1_19_R2 implements NmsProvider {
 				// drop
 				if (oldItem.isSimilar(newItem) || oldItem.getType() == Material.AIR)
 					newItem.setAmount(oldItem.getType() == Material.AIR ? 1 : oldItem.getAmount() + 1);
-			} else if (slot > 0 && mouseClick == 0) // drop
+			} else if (slot > 0) // drop
 				if (oldItem.isSimilar(newItem))
 					newItem.setAmount(Math.min(newItem.getAmount() + oldItem.getAmount(), newItem.getMaxStackSize()));
 			break;
@@ -1028,8 +1010,7 @@ public class v1_19_R2 implements NmsProvider {
 
 		ClickType clickType = InventoryUtils.buildClick(type == InventoryClickType.f ? 1 : type == InventoryClickType.b ? 2 : 0, mouseClick);
 		if (slot > -1) {
-			if (!cancel)
-				cancel = InventoryUtils.useItem(player, gui, slot, clickType);
+            cancel = InventoryUtils.useItem(player, gui, slot, clickType);
 			if (!gui.isInsertable())
 				cancel = true;
 
@@ -1041,9 +1022,7 @@ public class v1_19_R2 implements NmsProvider {
 		if (!cancel) {
 			if (gui instanceof AnvilGUI) { // Event
 				final ItemStack newItemFinal = newItem;
-				postToMainThread(() -> {
-					processEvent(c, type, gui, player, slot, gameSlot, newItemFinal, oldItem, packet, mouseClick, clickType, nPlayer);
-				});
+				postToMainThread(() -> processEvent(c, type, gui, player, slot, gameSlot, newItemFinal, oldItem, packet, mouseClick, clickType, nPlayer));
 			} else
 				processEvent(c, type, gui, player, slot, gameSlot, newItem, oldItem, packet, mouseClick, clickType, nPlayer);
 			return true;
@@ -1069,55 +1048,52 @@ public class v1_19_R2 implements NmsProvider {
 	private void processEvent(Container c, InventoryClickType type, HolderGUI gui, Player player, int slot, int gameSlot, ItemStack newItem, ItemStack oldItem, PacketPlayInWindowClick packet,
 			int mouseClick, ClickType clickType, EntityHuman nPlayer) {
 		c.h();
-		switch (type) {
-		case b: {
-			ItemStack[] contents = slot < gui.size() ? player.getInventory().getStorageContents() : gui.getInventory().getStorageContents();
-			boolean interactWithResultSlot = false;
-			if (gui instanceof AnvilGUI && slot < gui.size() && slot == 2)
-				if (c.b(2).a(nPlayer))
-					interactWithResultSlot = true;
-				else
-					return;
-			Pair result = slot < gui.size()
-					? InventoryUtils.shift(slot, player, gui, clickType, gui instanceof AnvilGUI && slot != 2 ? DestinationType.PLAYER_FROM_ANVIL : DestinationType.PLAYER, null, contents, oldItem)
-					: InventoryUtils.shift(slot, player, gui, clickType, DestinationType.GUI, gui.getNotInterableSlots(player), contents, oldItem);
-			@SuppressWarnings("unchecked")
-			Map<Integer, ItemStack> modified = (Map<Integer, ItemStack>) result.getValue();
-			int remaining = (int) result.getKey();
+        if (type == InventoryClickType.b) {
+            ItemStack[] contents = slot < gui.size() ? player.getInventory().getStorageContents() : gui.getInventory().getStorageContents();
+            boolean interactWithResultSlot = false;
+            if (gui instanceof AnvilGUI && slot < gui.size() && slot == 2)
+                if (c.b(2).a(nPlayer))
+                    interactWithResultSlot = true;
+                else
+                    return;
+            Pair result = slot < gui.size()
+                    ? InventoryUtils.shift(slot, player, gui, clickType, gui instanceof AnvilGUI && slot != 2 ? DestinationType.PLAYER_FROM_ANVIL : DestinationType.PLAYER, null, contents, oldItem)
+                    : InventoryUtils.shift(slot, player, gui, clickType, DestinationType.GUI, gui.getNotInterableSlots(player), contents, oldItem);
+            @SuppressWarnings("unchecked")
+            Map<Integer, ItemStack> modified = (Map<Integer, ItemStack>) result.getValue();
+            int remaining = (int) result.getKey();
 
-			if (!modified.isEmpty())
-				if (slot < gui.size()) {
-					for (Entry<Integer, ItemStack> modif : modified.entrySet())
-						nPlayer.fE().a(modif.getKey(), (net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue()));
-					if (remaining == 0) {
-						c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-						if (interactWithResultSlot) {
-							c.b(0).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-							c.b(1).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-						}
-					} else {
-						newItem.setAmount(remaining);
-						c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(newItem));
-					}
-				} else {
-					for (Entry<Integer, ItemStack> modif : modified.entrySet())
-						c.b(modif.getKey()).d((net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue())); // Visual & Nms side
-					// Plugin & Bukkit side
-					gui.getInventory().setStorageContents(contents);
-					if (remaining == 0)
-						nPlayer.fE().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(null));
-					else {
-						newItem.setAmount(remaining);
-						nPlayer.fE().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(newItem));
-					}
-				}
-			c.i();
-			return;
-		}
-		default:
-			processClick(gui, gui.getNotInterableSlots(player), c, slot, mouseClick, type, nPlayer);
-			break;
-		}
+            if (!modified.isEmpty())
+                if (slot < gui.size()) {
+                    for (Entry<Integer, ItemStack> modif : modified.entrySet())
+                        nPlayer.fE().a(modif.getKey(), (net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue()));
+                    if (remaining == 0) {
+                        c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                        if (interactWithResultSlot) {
+                            c.b(0).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                            c.b(1).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                        }
+                    } else {
+                        newItem.setAmount(remaining);
+                        c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(newItem));
+                    }
+                } else {
+                    for (Entry<Integer, ItemStack> modif : modified.entrySet())
+                        c.b(modif.getKey()).d((net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue())); // Visual & Nms side
+                    // Plugin & Bukkit side
+                    gui.getInventory().setStorageContents(contents);
+                    if (remaining == 0)
+                        nPlayer.fE().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(null));
+                    else {
+                        newItem.setAmount(remaining);
+                        nPlayer.fE().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(newItem));
+                    }
+                }
+            c.i();
+            return;
+        } else {
+            processClick(gui, gui.getNotInterableSlots(player), c, slot, mouseClick, type, nPlayer);
+        }
 		postToMainThread(() -> {
 			if (type != InventoryClickType.f && (c.a().equals(Containers.h) || c.a().equals(Containers.u)))
 				c.b();
@@ -1132,8 +1108,8 @@ public class v1_19_R2 implements NmsProvider {
 		});
 	}
 
-	private Method addAmount = Ref.method(Slot.class, "b", int.class);
-	private Method checkItem = Ref.method(Container.class, "a", EntityHuman.class, ClickAction.class, Slot.class, net.minecraft.world.item.ItemStack.class, net.minecraft.world.item.ItemStack.class);
+	private final Method addAmount = Ref.method(Slot.class, "b", int.class);
+	private final Method checkItem = Ref.method(Container.class, "a", EntityHuman.class, ClickAction.class, Slot.class, net.minecraft.world.item.ItemStack.class, net.minecraft.world.item.ItemStack.class);
 
 	@SuppressWarnings("unchecked")
 	private void processClick(HolderGUI gui, List<Integer> ignoredSlots, Container container, int slotIndex, int button, InventoryClickType actionType, EntityHuman player) {
@@ -1144,7 +1120,7 @@ public class v1_19_R2 implements NmsProvider {
 			int j = getContainerStateId(container);
 			Set<Slot> mod = (Set<Slot>) Ref.get(container, containerV);
 			if (u != 0) {
-				Ref.set(container, containerU, u = 0);
+				Ref.set(container, containerU, 0);
 				mod.clear();
 			} else if (actionType == InventoryClickType.a && (button == 0 || button == 1)) {
 				ClickAction clickaction = button == 0 ? ClickAction.a : ClickAction.b;
@@ -1251,7 +1227,7 @@ public class v1_19_R2 implements NmsProvider {
 				net.minecraft.world.item.ItemStack itemstack = slot3.b(m, Integer.MAX_VALUE, player);
 				postToMainThread(() -> player.a(itemstack, true));
 			} else if (actionType == InventoryClickType.g && slotIndex >= 0) {
-				Slot slot2 = (Slot) container.i.get(slotIndex);
+				Slot slot2 = container.i.get(slotIndex);
 				net.minecraft.world.item.ItemStack itemstack1 = container.g();
 				if (!itemstack1.b() && (!slot2.f() || !slot2.a(player))) {
 					List<Integer> ignoreSlots = ignoredSlots == null ? Collections.emptyList() : ignoredSlots;
@@ -1264,7 +1240,7 @@ public class v1_19_R2 implements NmsProvider {
 
 					for (int l1 = 0; l1 < 2; ++l1)
 						for (int j2 = l; j2 >= 0 && j2 < container.i.size() && itemstack1.K() < itemstack1.f(); j2 += i2) {
-							Slot slot3 = (Slot) container.i.get(j2);
+							Slot slot3 = container.i.get(j2);
 							if (slot3.f() && Container.a(slot3, itemstack1, true) && slot3.a(player) && container.a(itemstack1, slot3)) {
 								net.minecraft.world.item.ItemStack itemstack3 = slot3.e();
 								if (l1 != 0 || itemstack3.K() != itemstack3.f()) {
@@ -1286,8 +1262,7 @@ public class v1_19_R2 implements NmsProvider {
 						modifiedSlots.put(slotIndex, new ItemStack(Material.AIR));
 					else
 						modifiedSlotsPlayerInv.put(InventoryUtils.convertToPlayerInvSlot(slotIndex - gui.size()), new ItemStack(Material.AIR));
-					if (!modifiedSlots.isEmpty() || !modifiedSlotsPlayerInv.isEmpty())
-						gui.onMultipleIteract((Player) player.getBukkitEntity(), modifiedSlots, modifiedSlotsPlayerInv);
+                    gui.onMultipleIteract((Player) player.getBukkitEntity(), modifiedSlots, modifiedSlotsPlayerInv);
 					for (int s : corruptedSlots)
 						BukkitLoader.getPacketHandler().send((Player) player.getBukkitEntity(), BukkitLoader.getNmsProvider().packetSetSlot(BukkitLoader.getNmsProvider().getContainerId(container), s,
 								getContainerStateId(container), BukkitLoader.getNmsProvider().getSlotItem(container, s)));
@@ -1296,7 +1271,9 @@ public class v1_19_R2 implements NmsProvider {
 		}
 	}
 
-	private Field containerU = Ref.field(Container.class, "u"), containerV = Ref.field(Container.class, "v"), containerT = Ref.field(Container.class, "t");
+	private final Field containerU = Ref.field(Container.class, "u");
+    private final Field containerV = Ref.field(Container.class, "v");
+    private final Field containerT = Ref.field(Container.class, "t");
 
 	@SuppressWarnings("unchecked")
 	private void processDragMove(HolderGUI gui, Container container, EntityHuman player, int slot, int mouseClick) {
@@ -1316,8 +1293,7 @@ public class v1_19_R2 implements NmsProvider {
 					mod.clear();
 				} else {
 					mod.clear();
-					u = 0;
-				}
+                }
 				break;
 			}
 			case 1: {
@@ -1381,8 +1357,7 @@ public class v1_19_R2 implements NmsProvider {
 						container.b();
 				}
 				mod.clear();
-				u = 0;
-			default:
+                default:
 				mod.clear();
 				u = 0;
 				break;
@@ -1391,22 +1366,12 @@ public class v1_19_R2 implements NmsProvider {
 	}
 
 	public static int a(Set<Slot> slots, int mode, net.minecraft.world.item.ItemStack stack) {
-		int j;
-		switch (mode) {
-		case 0:
-			j = MathHelper.d((float) stack.K() / (float) slots.size());
-			break;
-		case 1:
-			j = 1;
-			break;
-		case 2:
-			j = stack.c().n();
-			break;
-		default:
-			j = stack.K();
-		}
-
-		return j;
+		return switch (mode) {
+            case 0 -> MathHelper.d((float) stack.K() / (float) slots.size());
+            case 1 -> 1;
+            case 2 -> stack.c().n();
+            default -> stack.K();
+        };
 	}
 
 	@Override
@@ -1617,50 +1582,43 @@ public class v1_19_R2 implements NmsProvider {
 		return new PacketPlayOutExperience(exp, total, toNextLevel);
 	}
 
+
+
+	private ClientboundPlayerInfoUpdatePacket.a fromBukkit(PlayerInfoType type){
+		return switch (type) {
+			case ADD_PLAYER -> ClientboundPlayerInfoUpdatePacket.a.a;
+			case UPDATE_DISPLAY_NAME -> ClientboundPlayerInfoUpdatePacket.a.f;
+			case UPDATE_GAME_MODE -> ClientboundPlayerInfoUpdatePacket.a.c;
+			case UPDATE_LATENCY -> ClientboundPlayerInfoUpdatePacket.a.e;
+			default -> null;
+		};
+	}
+
 	@Override
 	public Object packetPlayerInfo(PlayerInfoType type, Player player) {
-		a action = null;
-		switch (type) {
-		case ADD_PLAYER:
-			action = a.a;
-			break;
-		case REMOVE_PLAYER:
-			return new ClientboundPlayerInfoRemovePacket(Arrays.asList(player.getUniqueId()));
-		case UPDATE_DISPLAY_NAME:
-			action = a.f;
-			break;
-		case UPDATE_GAME_MODE:
-			action = a.c;
-			break;
-		case UPDATE_LATENCY:
-			action = a.e;
-			break;
-		}
-		return new ClientboundPlayerInfoUpdatePacket(action, (EntityPlayer) getPlayer(player));
+		if(type==PlayerInfoType.REMOVE_PLAYER)
+			return new ClientboundPlayerInfoRemovePacket(List.of(player.getUniqueId()));
+		return new ClientboundPlayerInfoUpdatePacket(fromBukkit(type), (EntityPlayer) getPlayer(player));
+	}
+
+	static Field setField, listField;
+
+	static {
+		setField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "a");
+		listField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "b");
 	}
 
 	@Override
 	public Object packetPlayerInfo(PlayerInfoType type, GameProfileHandler gameProfile, int latency, GameMode gameMode, Component playerName) {
-		a action = null;
-		switch (type) {
-		case ADD_PLAYER:
-			action = a.a;
-			break;
-		case REMOVE_PLAYER:
-			return new ClientboundPlayerInfoRemovePacket(Arrays.asList(gameProfile.getUUID()));
-		case UPDATE_DISPLAY_NAME:
-			action = a.f;
-			break;
-		case UPDATE_GAME_MODE:
-			action = a.c;
-			break;
-		case UPDATE_LATENCY:
-			action = a.e;
-			break;
-		}
-		ClientboundPlayerInfoUpdatePacket packet = new ClientboundPlayerInfoUpdatePacket(EnumSet.of(action), Collections.emptyList());
-		packet.c().add(new b(gameProfile.getUUID(), (GameProfile) toGameProfile(gameProfile), true, latency, gameMode == null ? EnumGamemode.a : EnumGamemode.a(gameMode.name().toLowerCase()),
+		if(type==PlayerInfoType.REMOVE_PLAYER)
+			return new ClientboundPlayerInfoRemovePacket(List.of(gameProfile.getUUID()));
+		EnumSet<ClientboundPlayerInfoUpdatePacket.a> set = EnumSet.of(fromBukkit(type));
+		List<ClientboundPlayerInfoUpdatePacket.b> list = Collections.singletonList(new ClientboundPlayerInfoUpdatePacket.b(gameProfile.getUUID(), (GameProfile) toGameProfile(gameProfile), true, latency,
+				gameMode == null ? EnumGamemode.a : EnumGamemode.a(gameMode.name().toLowerCase()),
 				(IChatBaseComponent) (playerName == null ? toIChatBaseComponent(new Component(gameProfile.getUsername())) : toIChatBaseComponent(playerName)), null));
+		ClientboundPlayerInfoUpdatePacket packet = (ClientboundPlayerInfoUpdatePacket) Ref.newUnsafeInstance(ClientboundPlayerInfoUpdatePacket.class);
+		Ref.set(packet, setField, set);
+		Ref.set(packet, listField, list);
 		return packet;
 	}
 
@@ -1701,7 +1659,9 @@ public class v1_19_R2 implements NmsProvider {
 		return profile;
 	}
 
-	private Field name = Ref.field(Property.class, "name"), value = Ref.field(Property.class, "value"), signature = Ref.field(Property.class, "signature");
+	private final Field name = Ref.field(Property.class, "name");
+    private final Field value = Ref.field(Property.class, "value");
+    private final Field signature = Ref.field(Property.class, "signature");
 
 	@Override
 	public GameProfileHandler fromGameProfile(Object gameProfile) {
