@@ -6,18 +6,8 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.InetSocketAddress;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
 import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 
@@ -26,6 +16,11 @@ import javax.imageio.ImageIO;
 import me.devtec.theapi.bukkit.nms.GameProfileHandler;
 import me.devtec.theapi.bukkit.nms.NBTEdit;
 import me.devtec.theapi.bukkit.nms.NmsProvider;
+import net.minecraft.network.protocol.common.ClientboundCustomPayloadPacket;
+import net.minecraft.network.protocol.common.ClientboundUpdateTagsPacket;
+import net.minecraft.network.protocol.configuration.ClientboundFinishConfigurationPacket;
+import net.minecraft.network.protocol.game.*;
+import net.minecraft.network.protocol.login.PacketLoginOutSuccess;
 import org.bukkit.Bukkit;
 import org.bukkit.Chunk;
 import org.bukkit.GameMode;
@@ -96,33 +91,6 @@ import net.minecraft.network.chat.ChatModifier;
 import net.minecraft.network.chat.IChatBaseComponent;
 import net.minecraft.network.chat.IChatMutableComponent;
 import net.minecraft.network.protocol.common.ClientboundResourcePackPushPacket;
-import net.minecraft.network.protocol.game.ClientboundClearTitlesPacket;
-import net.minecraft.network.protocol.game.ClientboundPlayerInfoRemovePacket;
-import net.minecraft.network.protocol.game.ClientboundPlayerInfoUpdatePacket;
-import net.minecraft.network.protocol.game.ClientboundSetActionBarTextPacket;
-import net.minecraft.network.protocol.game.ClientboundSetSubtitleTextPacket;
-import net.minecraft.network.protocol.game.ClientboundSetTitleTextPacket;
-import net.minecraft.network.protocol.game.ClientboundSetTitlesAnimationPacket;
-import net.minecraft.network.protocol.game.ClientboundSystemChatPacket;
-import net.minecraft.network.protocol.game.CommonPlayerSpawnInfo;
-import net.minecraft.network.protocol.game.PacketPlayInWindowClick;
-import net.minecraft.network.protocol.game.PacketPlayOutBlockChange;
-import net.minecraft.network.protocol.game.PacketPlayOutCloseWindow;
-import net.minecraft.network.protocol.game.PacketPlayOutEntityDestroy;
-import net.minecraft.network.protocol.game.PacketPlayOutEntityHeadRotation;
-import net.minecraft.network.protocol.game.PacketPlayOutEntityMetadata;
-import net.minecraft.network.protocol.game.PacketPlayOutExperience;
-import net.minecraft.network.protocol.game.PacketPlayOutHeldItemSlot;
-import net.minecraft.network.protocol.game.PacketPlayOutOpenWindow;
-import net.minecraft.network.protocol.game.PacketPlayOutPlayerListHeaderFooter;
-import net.minecraft.network.protocol.game.PacketPlayOutPosition;
-import net.minecraft.network.protocol.game.PacketPlayOutRespawn;
-import net.minecraft.network.protocol.game.PacketPlayOutScoreboardDisplayObjective;
-import net.minecraft.network.protocol.game.PacketPlayOutScoreboardObjective;
-import net.minecraft.network.protocol.game.PacketPlayOutScoreboardScore;
-import net.minecraft.network.protocol.game.PacketPlayOutScoreboardTeam;
-import net.minecraft.network.protocol.game.PacketPlayOutSetSlot;
-import net.minecraft.network.protocol.game.PacketPlayOutSpawnEntity;
 import net.minecraft.network.protocol.status.PacketStatusOutServerInfo;
 import net.minecraft.network.protocol.status.ServerPing;
 import net.minecraft.network.protocol.status.ServerPing.ServerData;
@@ -323,21 +291,15 @@ public class v1_20_R3 implements NmsProvider {
 
 	@Override
 	public Object packetTitle(TitleAction action, Component text, int fadeIn, int stay, int fadeOut) {
-		switch (action) {
-		case ACTIONBAR:
-			return new ClientboundSetActionBarTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case TITLE:
-			return new ClientboundSetTitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case SUBTITLE:
-			return new ClientboundSetSubtitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
-		case TIMES:
-			return new ClientboundSetTitlesAnimationPacket(fadeIn, stay, fadeOut);
-		case CLEAR:
-		case RESET:
-			return new ClientboundClearTitlesPacket(true);
-		}
-		return null;
-	}
+        return switch (action) {
+            case ACTIONBAR ->
+                    new ClientboundSetActionBarTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case TITLE -> new ClientboundSetTitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case SUBTITLE -> new ClientboundSetSubtitleTextPacket((IChatBaseComponent) this.toIChatBaseComponent(text));
+            case TIMES -> new ClientboundSetTitlesAnimationPacket(fadeIn, stay, fadeOut);
+            case CLEAR, RESET -> new ClientboundClearTitlesPacket(true);
+        };
+    }
 
 	@Override
 	public Object packetChat(ChatType type, Object chatBase, UUID uuid) {
@@ -389,7 +351,7 @@ public class v1_20_R3 implements NmsProvider {
 					IChatBaseComponent component = compoundTag.getName() == null ? null : (IChatBaseComponent) toIChatBaseComponent(compoundTag.getName());
 					EntityTypes<?> entityType = BuiltInRegistries.g.a(new MinecraftKey(compoundTag.getType()));
 					modif = modif.a(new ChatHoverable(EnumHoverAction.c, new ChatHoverable.b(entityType, compoundTag.getId(), component)));
-				} catch (Exception commandSyntaxException) {
+				} catch (Exception ignored) {
 				}
 				break;
 			case SHOW_ITEM:
@@ -400,7 +362,7 @@ public class v1_20_R3 implements NmsProvider {
 					if (compoundTag.getNbt() != null)
 						stack.c((NBTTagCompound) parseNBT(compoundTag.getNbt()));
 					modif = modif.a(new ChatHoverable(EnumHoverAction.b, new ChatHoverable.c(stack)));
-				} catch (Exception commandSyntaxException) {
+				} catch (Exception ignored) {
 				}
 				break;
 			default:
@@ -527,8 +489,7 @@ public class v1_20_R3 implements NmsProvider {
 			case SHOW_ENTITY: {
 				net.minecraft.network.chat.ChatHoverable.b hover = modif.i().a(EnumHoverAction.c);
 				ComponentEntity compEntity = new ComponentEntity(hover.b.j().a(), hover.c);
-				if (hover.d.isPresent())
-					compEntity.setName(fromIChatBaseComponent(hover.d.get()));
+                hover.d.ifPresent(iChatBaseComponent -> compEntity.setName(fromIChatBaseComponent(iChatBaseComponent)));
 				comp.setHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_ENTITY, compEntity));
 				break;
 			}
@@ -562,13 +523,12 @@ public class v1_20_R3 implements NmsProvider {
 
 	@Override
 	public BlockDataStorage toMaterial(Object blockOrIBlockData) {
-		if (blockOrIBlockData instanceof Block) {
-			IBlockData data = ((Block) blockOrIBlockData).o();
+		if (blockOrIBlockData instanceof Block block) {
+			IBlockData data = block.o();
 			return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
 		}
-		if (blockOrIBlockData instanceof IBlockData) {
-			IBlockData data = (IBlockData) blockOrIBlockData;
-			return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
+		if (blockOrIBlockData instanceof IBlockData data) {
+            return new BlockDataStorage(CraftMagicNumbers.getMaterial(data.b()), (byte) 0, asString(data));
 		}
 		return new BlockDataStorage(Material.AIR);
 	}
@@ -609,21 +569,21 @@ public class v1_20_R3 implements NmsProvider {
 		if (string == null || string.trim().isEmpty())
 			return ib;
 
-		String key = "";
-		String value = "";
+		StringBuilder key = new StringBuilder();
+		StringBuilder value = new StringBuilder();
 		int set = 0;
 
 		for (int i = 1; i < string.length() - 1; ++i) {
 			char c = string.charAt(i);
 			if (c == ',') {
-				IBlockState ibj = blockStateList.a(key);
+				IBlockState ibj = blockStateList.a(key.toString());
 				if (ibj != null) {
-					Optional optional = ibj.b(value);
+					Optional optional = ibj.b(value.toString());
 					if (optional.isPresent())
 						ib = ib.a(ibj, (Comparable) optional.get());
 				}
-				key = "";
-				value = "";
+				key = new StringBuilder();
+				value = new StringBuilder();
 				set = 0;
 				continue;
 			}
@@ -632,14 +592,14 @@ public class v1_20_R3 implements NmsProvider {
 				continue;
 			}
 			if (set == 0)
-				key += c;
+				key.append(c);
 			else
-				value += c;
+				value.append(c);
 		}
 		if (set == 1) {
-			IBlockState ibj = blockStateList.a(key);
+			IBlockState ibj = blockStateList.a(key.toString());
 			if (ibj != null) {
-				Optional optional = ibj.b(value);
+				Optional optional = ibj.b(value.toString());
 				if (optional.isPresent())
 					ib = ib.a(ibj, (Comparable) optional.get());
 			}
@@ -680,7 +640,7 @@ public class v1_20_R3 implements NmsProvider {
 			boolean shouldSkip = true;
 			if (!onlyModifyState)
 				shouldSkip = false;
-			else if (onlyModifyState && !ent.r().b().getClass().equals(iblock.b().getClass())) {
+			else if (!ent.r().b().getClass().equals(iblock.b().getClass())) {
 				shouldSkip = false;
 				onlyModifyState = false;
 			}
@@ -738,8 +698,8 @@ public class v1_20_R3 implements NmsProvider {
 		chunk.r.l().a().a(new BlockPosition(x, y, z));
 	}
 
-	private static boolean isPaperChunkRework = Ref.getClass("io.papermc.paper.chunk.system.scheduling.ChunkHolderManager") != null;
-	private static Method getBlockStateFinal = Ref.method(net.minecraft.world.level.chunk.Chunk.class, "getBlockStateFinal", int.class, int.class, int.class);
+	private static final boolean isPaperChunkRework = Ref.getClass("io.papermc.paper.chunk.system.scheduling.ChunkHolderManager") != null;
+	private static final Method getBlockStateFinal = Ref.method(net.minecraft.world.level.chunk.Chunk.class, "getBlockStateFinal", int.class, int.class, int.class);
 
 	@Override
 	public Object getBlock(Object objChunk, int x, int y, int z) {
@@ -805,7 +765,7 @@ public class v1_20_R3 implements NmsProvider {
 		return CraftMagicNumbers.getBlock(state.getType(), state.getRawData());
 	}
 
-	static Field bukkitChunk = Ref.field(net.minecraft.world.level.chunk.Chunk.class, "bukkitChunk");
+	static final Field bukkitChunk = Ref.field(net.minecraft.world.level.chunk.Chunk.class, "bukkitChunk");
 
 	@Override
 	public Chunk toBukkitChunk(Object nmsChunk) {
@@ -824,7 +784,7 @@ public class v1_20_R3 implements NmsProvider {
 		return ((EntityPlayer) getPlayer(player)).c;
 	}
 
-	private static Field networkManagerField = Ref.field(ServerCommonPacketListenerImpl.class, NetworkManager.class);
+	private static final Field networkManagerField = Ref.field(ServerCommonPacketListenerImpl.class, NetworkManager.class);
 
 	@Override
 	public Object getConnectionNetwork(Object playercon) {
@@ -995,7 +955,7 @@ public class v1_20_R3 implements NmsProvider {
 				// drop
 				if (oldItem.isSimilar(newItem) || oldItem.getType() == Material.AIR)
 					newItem.setAmount(oldItem.getType() == Material.AIR ? 1 : oldItem.getAmount() + 1);
-			} else if (slot > 0 && mouseClick == 0) // drop
+			} else if (slot > 0) // drop
 				if (oldItem.isSimilar(newItem))
 					newItem.setAmount(Math.min(newItem.getAmount() + oldItem.getAmount(), newItem.getMaxStackSize()));
 			break;
@@ -1045,8 +1005,7 @@ public class v1_20_R3 implements NmsProvider {
 
 		ClickType clickType = InventoryUtils.buildClick(type == InventoryClickType.f ? 1 : type == InventoryClickType.b ? 2 : 0, mouseClick);
 		if (slot > -1) {
-			if (!cancel)
-				cancel = InventoryUtils.useItem(player, gui, slot, clickType);
+            cancel = InventoryUtils.useItem(player, gui, slot, clickType);
 			if (!gui.isInsertable())
 				cancel = true;
 
@@ -1058,9 +1017,7 @@ public class v1_20_R3 implements NmsProvider {
 		if (!cancel) {
 			if (gui instanceof AnvilGUI) { // Event
 				final ItemStack newItemFinal = newItem;
-				postToMainThread(() -> {
-					processEvent(c, type, gui, player, slot, gameSlot, newItemFinal, oldItem, packet, mouseClick, clickType, nPlayer);
-				});
+				postToMainThread(() -> processEvent(c, type, gui, player, slot, gameSlot, newItemFinal, oldItem, packet, mouseClick, clickType, nPlayer));
 			} else
 				processEvent(c, type, gui, player, slot, gameSlot, newItem, oldItem, packet, mouseClick, clickType, nPlayer);
 			return true;
@@ -1086,55 +1043,52 @@ public class v1_20_R3 implements NmsProvider {
 	private void processEvent(Container c, InventoryClickType type, HolderGUI gui, Player player, int slot, int gameSlot, ItemStack newItem, ItemStack oldItem, PacketPlayInWindowClick packet,
 			int mouseClick, ClickType clickType, EntityHuman nPlayer) {
 		c.h();
-		switch (type) {
-		case b: {
-			ItemStack[] contents = slot < gui.size() ? player.getInventory().getStorageContents() : gui.getInventory().getStorageContents();
-			boolean interactWithResultSlot = false;
-			if (gui instanceof AnvilGUI && slot < gui.size() && slot == 2)
-				if (c.b(2).a(nPlayer))
-					interactWithResultSlot = true;
-				else
-					return;
-			Pair result = slot < gui.size()
-					? InventoryUtils.shift(slot, player, gui, clickType, gui instanceof AnvilGUI && slot != 2 ? DestinationType.PLAYER_FROM_ANVIL : DestinationType.PLAYER, null, contents, oldItem)
-					: InventoryUtils.shift(slot, player, gui, clickType, DestinationType.GUI, gui.getNotInterableSlots(player), contents, oldItem);
-			@SuppressWarnings("unchecked")
-			Map<Integer, ItemStack> modified = (Map<Integer, ItemStack>) result.getValue();
-			int remaining = (int) result.getKey();
+        if (type == InventoryClickType.b) {
+            ItemStack[] contents = slot < gui.size() ? player.getInventory().getStorageContents() : gui.getInventory().getStorageContents();
+            boolean interactWithResultSlot = false;
+            if (gui instanceof AnvilGUI && slot < gui.size() && slot == 2)
+                if (c.b(2).a(nPlayer))
+                    interactWithResultSlot = true;
+                else
+                    return;
+            Pair result = slot < gui.size()
+                    ? InventoryUtils.shift(slot, player, gui, clickType, gui instanceof AnvilGUI && slot != 2 ? DestinationType.PLAYER_FROM_ANVIL : DestinationType.PLAYER, null, contents, oldItem)
+                    : InventoryUtils.shift(slot, player, gui, clickType, DestinationType.GUI, gui.getNotInterableSlots(player), contents, oldItem);
+            @SuppressWarnings("unchecked")
+            Map<Integer, ItemStack> modified = (Map<Integer, ItemStack>) result.getValue();
+            int remaining = (int) result.getKey();
 
-			if (!modified.isEmpty())
-				if (slot < gui.size()) {
-					for (Entry<Integer, ItemStack> modif : modified.entrySet())
-						nPlayer.fS().a(modif.getKey(), (net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue()));
-					if (remaining == 0) {
-						c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-						if (interactWithResultSlot) {
-							c.b(0).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-							c.b(1).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
-						}
-					} else {
-						newItem.setAmount(remaining);
-						c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(newItem));
-					}
-				} else {
-					for (Entry<Integer, ItemStack> modif : modified.entrySet())
-						c.b(modif.getKey()).d((net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue())); // Visual & Nms side
-					// Plugin & Bukkit side
-					gui.getInventory().setStorageContents(contents);
-					if (remaining == 0)
-						nPlayer.fS().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(null));
-					else {
-						newItem.setAmount(remaining);
-						nPlayer.fS().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(newItem));
-					}
-				}
-			c.i();
-			return;
-		}
-		default:
-			processClick(gui, gui.getNotInterableSlots(player), c, slot, mouseClick, type, nPlayer);
-			break;
-		}
+            if (!modified.isEmpty())
+                if (slot < gui.size()) {
+                    for (Entry<Integer, ItemStack> modif : modified.entrySet())
+                        nPlayer.fS().a(modif.getKey(), (net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue()));
+                    if (remaining == 0) {
+                        c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                        if (interactWithResultSlot) {
+                            c.b(0).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                            c.b(1).d((net.minecraft.world.item.ItemStack) asNMSItem(null));
+                        }
+                    } else {
+                        newItem.setAmount(remaining);
+                        c.b(gameSlot).d((net.minecraft.world.item.ItemStack) asNMSItem(newItem));
+                    }
+                } else {
+                    for (Entry<Integer, ItemStack> modif : modified.entrySet())
+                        c.b(modif.getKey()).d((net.minecraft.world.item.ItemStack) asNMSItem(modif.getValue())); // Visual & Nms side
+                    // Plugin & Bukkit side
+                    gui.getInventory().setStorageContents(contents);
+                    if (remaining == 0)
+                        nPlayer.fS().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(null));
+                    else {
+                        newItem.setAmount(remaining);
+                        nPlayer.fS().a(gameSlot, (net.minecraft.world.item.ItemStack) asNMSItem(newItem));
+                    }
+                }
+            c.i();
+            return;
+        } else {
+            processClick(gui, gui.getNotInterableSlots(player), c, slot, mouseClick, type, nPlayer);
+        }
 		postToMainThread(() -> {
 			if (type != InventoryClickType.f && (c.a().equals(Containers.i) || c.a().equals(Containers.v)))
 				c.b();
@@ -1149,8 +1103,8 @@ public class v1_20_R3 implements NmsProvider {
 		});
 	}
 
-	private Method addAmount = Ref.method(Slot.class, "b", int.class);
-	private Method checkItem = Ref.method(Container.class, "a", EntityHuman.class, ClickAction.class, Slot.class, net.minecraft.world.item.ItemStack.class, net.minecraft.world.item.ItemStack.class);
+	private final Method addAmount = Ref.method(Slot.class, "b", int.class);
+	private final Method checkItem = Ref.method(Container.class, "a", EntityHuman.class, ClickAction.class, Slot.class, net.minecraft.world.item.ItemStack.class, net.minecraft.world.item.ItemStack.class);
 
 	@SuppressWarnings("unchecked")
 	private void processClick(HolderGUI gui, List<Integer> ignoredSlots, Container container, int slotIndex, int button, InventoryClickType actionType, EntityHuman player) {
@@ -1161,7 +1115,7 @@ public class v1_20_R3 implements NmsProvider {
 			int j = getContainerStateId(container);
 			Set<Slot> mod = (Set<Slot>) Ref.get(container, containerV);
 			if (u != 0) {
-				Ref.set(container, containerU, u = 0);
+				Ref.set(container, containerU, 0);
 				mod.clear();
 			} else if (actionType == InventoryClickType.a && (button == 0 || button == 1)) {
 				ClickAction clickaction = button == 0 ? ClickAction.a : ClickAction.b;
@@ -1301,8 +1255,7 @@ public class v1_20_R3 implements NmsProvider {
 						modifiedSlots.put(slotIndex, new ItemStack(Material.AIR));
 					else
 						modifiedSlotsPlayerInv.put(InventoryUtils.convertToPlayerInvSlot(slotIndex - gui.size()), new ItemStack(Material.AIR));
-					if (!modifiedSlots.isEmpty() || !modifiedSlotsPlayerInv.isEmpty())
-						gui.onMultipleIteract((Player) player.getBukkitEntity(), modifiedSlots, modifiedSlotsPlayerInv);
+                    gui.onMultipleIteract((Player) player.getBukkitEntity(), modifiedSlots, modifiedSlotsPlayerInv);
 					for (int s : corruptedSlots)
 						BukkitLoader.getPacketHandler().send((Player) player.getBukkitEntity(), BukkitLoader.getNmsProvider().packetSetSlot(BukkitLoader.getNmsProvider().getContainerId(container), s,
 								getContainerStateId(container), BukkitLoader.getNmsProvider().getSlotItem(container, s)));
@@ -1311,7 +1264,9 @@ public class v1_20_R3 implements NmsProvider {
 		}
 	}
 
-	private Field containerU = Ref.field(Container.class, "u"), containerV = Ref.field(Container.class, "v"), containerT = Ref.field(Container.class, "t");
+	private final Field containerU = Ref.field(Container.class, "u");
+    private final Field containerV = Ref.field(Container.class, "v");
+    private final Field containerT = Ref.field(Container.class, "t");
 
 	@SuppressWarnings("unchecked")
 	private void processDragMove(HolderGUI gui, Container container, EntityHuman player, int slot, int mouseClick) {
@@ -1331,8 +1286,7 @@ public class v1_20_R3 implements NmsProvider {
 					mod.clear();
 				} else {
 					mod.clear();
-					u = 0;
-				}
+                }
 				break;
 			}
 			case 1: {
@@ -1393,8 +1347,7 @@ public class v1_20_R3 implements NmsProvider {
 						container.b();
 				}
 				mod.clear();
-				u = 0;
-			default:
+                default:
 				mod.clear();
 				u = 0;
 				break;
@@ -1404,9 +1357,8 @@ public class v1_20_R3 implements NmsProvider {
 
 	@Override
 	public boolean processServerListPing(String player, Object channel, Object packet) {
-		if (packet instanceof PacketContainer) {
-			PacketContainer container = (PacketContainer) packet;
-			PacketStatusOutServerInfo status = (PacketStatusOutServerInfo) container.getPacket();
+		if (packet instanceof PacketContainer container) {
+            PacketStatusOutServerInfo status = (PacketStatusOutServerInfo) container.getPacket();
 			ServerPing ping = status.a();
 
 			List<GameProfileHandler> gameProfiles = new ArrayList<>();
@@ -1414,7 +1366,7 @@ public class v1_20_R3 implements NmsProvider {
 				gameProfiles.add(fromGameProfile(profile));
 
 			IChatBaseComponent motd = IChatBaseComponent.a("");
-			Optional<ServerPingPlayerSample> players = Optional.empty();
+			Optional<ServerPingPlayerSample> players;
 			Optional<ServerData> onlineCount = Optional.empty();
 			Optional<ServerPing.a> serverIcon = Optional.empty();
 			boolean enforceSecureProfile = ping.e();
@@ -1630,72 +1582,41 @@ public class v1_20_R3 implements NmsProvider {
 		return new PacketPlayOutExperience(exp, total, toNextLevel);
 	}
 
-	@Override
-	public Object packetPlayerInfo(PlayerInfoType type, Player player) {
-		ClientboundPlayerInfoUpdatePacket.a action = null;
-		switch (type) {
-		case ADD_PLAYER:
-			action = ClientboundPlayerInfoUpdatePacket.a.a;
-			break;
-		case REMOVE_PLAYER:
-			return new ClientboundPlayerInfoRemovePacket(Arrays.asList(player.getUniqueId()));
-		case UPDATE_DISPLAY_NAME:
-			action = ClientboundPlayerInfoUpdatePacket.a.f;
-			break;
-		case UPDATE_GAME_MODE:
-			action = ClientboundPlayerInfoUpdatePacket.a.c;
-			break;
-		case UPDATE_LATENCY:
-			action = ClientboundPlayerInfoUpdatePacket.a.e;
-			break;
-		}
-		return new ClientboundPlayerInfoUpdatePacket(action, (EntityPlayer) getPlayer(player));
+	private ClientboundPlayerInfoUpdatePacket.a fromBukkit(PlayerInfoType type){
+		return switch (type) {
+			case ADD_PLAYER -> ClientboundPlayerInfoUpdatePacket.a.a;
+			case UPDATE_DISPLAY_NAME -> ClientboundPlayerInfoUpdatePacket.a.f;
+			case UPDATE_GAME_MODE -> ClientboundPlayerInfoUpdatePacket.a.c;
+			case UPDATE_LATENCY -> ClientboundPlayerInfoUpdatePacket.a.e;
+			default -> null;
+		};
 	}
 
-	static boolean MODERN_CLIENTBOUND_PACKET = Ref.constructor(ClientboundPlayerInfoUpdatePacket.class, EnumSet.class, List.class) == null;
+	@Override
+	public Object packetPlayerInfo(PlayerInfoType type, Player player) {
+		if(type==PlayerInfoType.REMOVE_PLAYER)
+			return new ClientboundPlayerInfoRemovePacket(List.of(player.getUniqueId()));
+		return new ClientboundPlayerInfoUpdatePacket(fromBukkit(type), (EntityPlayer) getPlayer(player));
+	}
+
 	static Field setField, listField;
-	static Constructor<?> clientboundConstructor;
 
 	static {
-		if (MODERN_CLIENTBOUND_PACKET) {
-			setField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "a");
-			listField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "b");
-		} else
-			clientboundConstructor = Ref.constructor(ClientboundPlayerInfoUpdatePacket.class, EnumSet.class, List.class);
+		setField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "a");
+		listField = Ref.field(ClientboundPlayerInfoUpdatePacket.class, "b");
 	}
 
 	@Override
 	public Object packetPlayerInfo(PlayerInfoType type, GameProfileHandler gameProfile, int latency, GameMode gameMode, Component playerName) {
-		ClientboundPlayerInfoUpdatePacket.a action = null;
-		switch (type) {
-		case ADD_PLAYER:
-			action = ClientboundPlayerInfoUpdatePacket.a.a;
-			break;
-		case REMOVE_PLAYER:
-			return new ClientboundPlayerInfoRemovePacket(Arrays.asList(gameProfile.getUUID()));
-		case UPDATE_DISPLAY_NAME:
-			action = ClientboundPlayerInfoUpdatePacket.a.f;
-			break;
-		case UPDATE_GAME_MODE:
-			action = ClientboundPlayerInfoUpdatePacket.a.c;
-			break;
-		case UPDATE_LATENCY:
-			action = ClientboundPlayerInfoUpdatePacket.a.e;
-			break;
-		}
-		EnumSet<ClientboundPlayerInfoUpdatePacket.a> set = EnumSet.of(action);
-		List<ClientboundPlayerInfoUpdatePacket.b> list = Collections.emptyList();
-		ClientboundPlayerInfoUpdatePacket packet;
-		if (MODERN_CLIENTBOUND_PACKET) {
-			packet = (ClientboundPlayerInfoUpdatePacket) Ref.newUnsafeInstance(ClientboundPlayerInfoUpdatePacket.class);
-			Ref.set(packet, setField, set);
-			Ref.set(packet, listField, list);
-		} else
-			packet = (ClientboundPlayerInfoUpdatePacket) Ref.newInstance(clientboundConstructor, set, list);
-		packet.d()
-				.add(new ClientboundPlayerInfoUpdatePacket.b(gameProfile.getUUID(), (GameProfile) toGameProfile(gameProfile), true, latency,
-						gameMode == null ? EnumGamemode.a : EnumGamemode.a(gameMode.name().toLowerCase()),
-						(IChatBaseComponent) (playerName == null ? toIChatBaseComponent(new Component(gameProfile.getUsername())) : toIChatBaseComponent(playerName)), null));
+		if(type==PlayerInfoType.REMOVE_PLAYER)
+			return new ClientboundPlayerInfoRemovePacket(List.of(gameProfile.getUUID()));
+		EnumSet<ClientboundPlayerInfoUpdatePacket.a> set = EnumSet.of(fromBukkit(type));
+		List<ClientboundPlayerInfoUpdatePacket.b> list = Collections.singletonList(new ClientboundPlayerInfoUpdatePacket.b(gameProfile.getUUID(), (GameProfile) toGameProfile(gameProfile), true, latency,
+				gameMode == null ? EnumGamemode.a : EnumGamemode.a(gameMode.name().toLowerCase()),
+				(IChatBaseComponent) (playerName == null ? toIChatBaseComponent(new Component(gameProfile.getUsername())) : toIChatBaseComponent(playerName)), null));
+		ClientboundPlayerInfoUpdatePacket packet = (ClientboundPlayerInfoUpdatePacket) Ref.newUnsafeInstance(ClientboundPlayerInfoUpdatePacket.class);
+		Ref.set(packet, setField, set);
+		Ref.set(packet, listField, list);
 		return packet;
 	}
 
@@ -1736,7 +1657,9 @@ public class v1_20_R3 implements NmsProvider {
 		return profile;
 	}
 
-	private Field name = Ref.field(Property.class, "name"), value = Ref.field(Property.class, "value"), signature = Ref.field(Property.class, "signature");
+	private final Field name = Ref.field(Property.class, "name");
+    private final Field value = Ref.field(Property.class, "value");
+    private final Field signature = Ref.field(Property.class, "signature");
 
 	@Override
 	public GameProfileHandler fromGameProfile(Object gameProfile) {
